--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           # Directory location of the application source code
           app_location: "/"
           # Required token
-          azure_static_web_apps_api_token: $(token)
+          azure_static_web_apps_api_token: ${{secrets.token}}
           # Custom command for Oryx to run when building Azure Functions source code
    
           # Directory location of the Azure Functions source code
